--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -5008,9 +5008,503 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B6z0QeFtl9Np",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Coding Time"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "A9eAR99-e12u",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import decimal\n",
+        "from decimal import Decimal"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "76kdy4g0mHEP",
+        "colab_type": "text"
+      },
+      "source": [
+        "Decimals have context, that can be used to specify rounding and precision (amongst other things)\n",
+        "</br>\n",
+        "</br>\n",
+        "Contexts can be local (temporary contexts) or global (default)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eRRdNDcpmNqb",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Global Context"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ae8lMW_smFmA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "13dd6b91-b383-4ac4-e6b2-e6c122f0c68e"
+      },
+      "source": [
+        "g_ctx  = decimal.getcontext()\n",
+        "g_ctx.prec"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "28"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Pxk3kipmVAZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d64673b7-52e8-491c-ef9f-2afa1207fa31"
+      },
+      "source": [
+        "g_ctx.rounding"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'ROUND_HALF_EVEN'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tsz5_ZiqmVq4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "g_ctx.prec = 6\n",
+        "g_ctx.rounding = decimal.ROUND_HALF_UP\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eJAgJDCEmc1Q",
+        "colab_type": "text"
+      },
+      "source": [
+        "And if we read this back directly from the global context:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YANCZZt4maTS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "513ca9bc-f016-43f2-ef3f-56b582134f9c"
+      },
+      "source": [
+        "decimal.getcontext().prec"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kP-e3Aogmfz4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cceb7544-83f8-48d7-a986-0ad59085b63d"
+      },
+      "source": [
+        "decimal.getcontext().rounding"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'ROUND_HALF_UP'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r3e7v9OKmkGn",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Local Context"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bnl9C_lcmnRz",
+        "colab_type": "text"
+      },
+      "source": [
+        "The ``localcontext()`` function will return a context manager that we can use with a ``with`` statement:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NNxT4RHBmhX_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "40f9340e-f664-4edf-a3b6-f476e7f872c6"
+      },
+      "source": [
+        "with decimal.localcontext() as ctx:\n",
+        "    print(ctx.prec)\n",
+        "    print(ctx.rounding)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "6\n",
+            "ROUND_HALF_UP\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "87b0tqfmmsIY",
+        "colab_type": "text"
+      },
+      "source": [
+        "Since no argument was specified in the ``localcontext()`` call, it provides us a context manager that uses a copy of the global context.\n",
+        "</br>\n",
+        "</br>\n",
+        "Modifying the local context has no effect on the global context"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JE5zI2fNmprJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ac856bcb-3db2-4721-a702-1a8ff478adb6"
+      },
+      "source": [
+        "with decimal.localcontext() as ctx:\n",
+        "    ctx.prec = 10\n",
+        "    print('local prec = {0}, global prec = {1}'.format(ctx.prec, g_ctx.prec))"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "local prec = 10, global prec = 6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QBlk4HYwmyZ6",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Rounding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C3uHNZbcmwlw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "30818c97-365c-4422-f163-a9bae6244858"
+      },
+      "source": [
+        "decimal.getcontext().rounding"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'ROUND_HALF_UP'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HRoSX7A9m78s",
+        "colab_type": "text"
+      },
+      "source": [
+        "The rounding mechanism is ROUND_HALF_UP because we set the global context to that earlier in this notebook. Note that normally the default is ROUND_HALF_EVEN.\n",
+        "</br>\n",
+        "So we first reset our global context rounding to that:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "443KkK04m7DP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "decimal.getcontext().rounding = decimal.ROUND_HALF_EVEN"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n-SnkCIWnB2l",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "24858f48-0f45-4ba4-e028-be6376e2867f"
+      },
+      "source": [
+        "x = Decimal('1.25')\n",
+        "y = Decimal('1.35')\n",
+        "print(round(x, 1))\n",
+        "print(round(y, 1))"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.2\n",
+            "1.4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H1Y2eSoznE6Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "Let's change the rounding mechanism in the global context to ROUND_HALF_UP:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eGrANzm-nC3g",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "decimal.getcontext().rounding = decimal.ROUND_HALF_UP"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WVTUgaltnEJ8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "74f750d2-8b6d-4ada-91c5-609ba92d5cc3"
+      },
+      "source": [
+        "x = Decimal('1.25')\n",
+        "y = Decimal('1.35')\n",
+        "print(round(x, 1))\n",
+        "print(round(y, 1))"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.3\n",
+            "1.4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dI3sMeTEnJ3f",
+        "colab_type": "text"
+      },
+      "source": [
+        "As you may have realized, changing the global context is a pain if you need to constantly switch between different precisions and rounding algorithms. Also, it could introduce bugs if you forget that you changed the global context somewhere further up in your module.\n",
+        "\n",
+        "For this reason, it is usually better to use a local context manager instead:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y9ShLBbhnMHh",
+        "colab_type": "text"
+      },
+      "source": [
+        "First we reset our global context rounding to the default:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z9ta6Mf_nIQg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "decimal.getcontext().rounding = decimal.ROUND_HALF_EVEN"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xPcTaaDgnOC_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "0b0b0b5a-7c31-40e5-e0e5-9caf17390f7c"
+      },
+      "source": [
+        "x = Decimal('1.25')\n",
+        "y = Decimal('1.35')\n",
+        "print(round(x, 1), round(y, 1))\n",
+        "with decimal.localcontext() as ctx:\n",
+        "    ctx.rounding = decimal.ROUND_HALF_UP\n",
+        "    print(round(x, 1), round(y, 1))\n",
+        "print(round(x, 1), round(y, 1))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.2 1.4\n",
+            "1.3 1.4\n",
+            "1.2 1.4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g1_S119znPIo",
         "colab_type": "code",
         "colab": {}
       },
