--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -5088,6 +5088,43 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6ABD3mp5sH6k",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "c85d3082-bff0-481a-8b48-f23cba8ca5e7"
+      },
+      "source": [
+        "print(type(g_ctx))\n",
+        "print(type(decimal.localcontext()))\n"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'decimal.Context'>\n",
+            "<class 'decimal.ContextManager'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D83yQA1cs8MJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "This HINTS we have to use `with` statement"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "3Pxk3kipmVAZ",
         "colab_type": "code",
         "colab": {
@@ -5128,6 +5165,36 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P8t8XCdvsaDm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ad0088a2-c1a5-462c-8ad5-ddba9a0f8393"
+      },
+      "source": [
+        "decimal.getcontext()"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Context(prec=6, rounding=ROUND_HALF_EVEN, Emin=-999999, Emax=999999, capitals=1, clamp=0, flags=[Inexact, Rounded], traps=[InvalidOperation, DivisionByZero, Overflow])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -5226,22 +5293,24 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 68
         },
-        "outputId": "40f9340e-f664-4edf-a3b6-f476e7f872c6"
+        "outputId": "c6436e1f-79b0-43a6-8fa6-0b4abe8fcd2c"
       },
       "source": [
         "with decimal.localcontext() as ctx:\n",
         "    print(ctx.prec)\n",
-        "    print(ctx.rounding)"
+        "    print(ctx.rounding)\n",
+        "    print(id(ctx) == id(decimal.getcontext()))"
       ],
-      "execution_count": 7,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "6\n",
-            "ROUND_HALF_UP\n"
+            "ROUND_HALF_EVEN\n",
+            "True\n"
           ],
           "name": "stdout"
         }
