--- a/Section_4_Numeric_Types.ipynb
+++ b/Section_4_Numeric_Types.ipynb
@@ -5667,17 +5667,17 @@
       "metadata": {
         "id": "GJriiONc7xdV",
         "colab_type": "code",
+        "outputId": "be8438a5-7196-4280-87f1-36661230a6b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "be8438a5-7196-4280-87f1-36661230a6b9"
+        }
       },
       "source": [
         "print(Decimal(10))\n",
         "print(Decimal(-10))"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5704,17 +5704,17 @@
       "metadata": {
         "id": "q-QXJnaa75x6",
         "colab_type": "code",
+        "outputId": "0163ce1a-c893-4fe5-a775-f29aac8f7b0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "0163ce1a-c893-4fe5-a775-f29aac8f7b0c"
+        }
       },
       "source": [
         "print(Decimal('0.1'))\n",
         "print(Decimal('-3.1415'))"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5751,18 +5751,18 @@
       "metadata": {
         "id": "sprnqMVp8CF1",
         "colab_type": "code",
+        "outputId": "1977c1dc-c3de-464e-f1c9-21796f1bdd38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "1977c1dc-c3de-464e-f1c9-21796f1bdd38"
+        }
       },
       "source": [
         "print(Decimal ((0, (3,1,4,1,5), -4)))\n",
         "print(Decimal((1, (1,2,3,4), -3)))\n",
         "print(Decimal((0, (1,2,3), 3)))"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5790,17 +5790,17 @@
       "metadata": {
         "id": "ELDFrrx08LBg",
         "colab_type": "code",
+        "outputId": "7d480f29-fdff-4784-acc1-600dc5d78839",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "7d480f29-fdff-4784-acc1-600dc5d78839"
+        }
       },
       "source": [
         "print(format(0.1, '.25f'))\n",
         "print(Decimal(0.1))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5876,11 +5876,11 @@
       "metadata": {
         "id": "i4ayhjlG8rJf",
         "colab_type": "code",
+        "outputId": "80170b72-7e7d-44ed-a86b-5dd5c16a0b12",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "80170b72-7e7d-44ed-a86b-5dd5c16a0b12"
+        }
       },
       "source": [
         "a = Decimal('0.12345')\n",
@@ -5889,7 +5889,7 @@
         "print(a,\n",
         "      b)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -5915,16 +5915,16 @@
       "metadata": {
         "id": "cT3QMGhZ8vmS",
         "colab_type": "code",
+        "outputId": "82ea7976-2859-479a-e041-3c4870807602",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "82ea7976-2859-479a-e041-3c4870807602"
+        }
       },
       "source": [
         "a+b"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5965,17 +5965,17 @@
       "metadata": {
         "id": "HTV2T4ku9GTh",
         "colab_type": "code",
+        "outputId": "204f1679-1a52-4d8b-b76f-cf1239f553a8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "204f1679-1a52-4d8b-b76f-cf1239f553a8"
+        }
       },
       "source": [
         "decimal.getcontext().prec = 6\n",
         "decimal.getcontext().rounding"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5996,11 +5996,11 @@
       "metadata": {
         "id": "m440m8On9NnL",
         "colab_type": "code",
+        "outputId": "d49b83af-b4e8-4f2a-83d0-055fe57eb9b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "d49b83af-b4e8-4f2a-83d0-055fe57eb9b0"
+        }
       },
       "source": [
         "a = Decimal('0.12345')\n",
@@ -6012,7 +6012,7 @@
         "    print('c within local context: {0}'.format(c))\n",
         "print('c within global context: {0}'.format(c))"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6144,11 +6144,11 @@
       "metadata": {
         "id": "Ag1M5Vvj9POy",
         "colab_type": "code",
+        "outputId": "857c725c-b61d-41f2-cd9d-a24868275a65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "857c725c-b61d-41f2-cd9d-a24868275a65"
+        }
       },
       "source": [
         "import decimal\n",
@@ -6160,7 +6160,7 @@
         "print(divmod(x, y))\n",
         "print( x == y * (x//y) + x % y)"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6178,11 +6178,11 @@
       "metadata": {
         "id": "ylQ1PWCfIJK_",
         "colab_type": "code",
+        "outputId": "be0ddece-c690-4772-a2e0-3bfb4db54683",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "be0ddece-c690-4772-a2e0-3bfb4db54683"
+        }
       },
       "source": [
         "a = Decimal('10')\n",
@@ -6191,7 +6191,7 @@
         "print(divmod(a, b))\n",
         "print( a == b * (a//b) + a % b)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6219,11 +6219,11 @@
       "metadata": {
         "id": "p93Ye6-SINxU",
         "colab_type": "code",
+        "outputId": "201b7c56-7f42-4341-e7eb-0f831adfdbba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "201b7c56-7f42-4341-e7eb-0f831adfdbba"
+        }
       },
       "source": [
         "x = -10\n",
@@ -6232,7 +6232,7 @@
         "print(divmod(x, y))\n",
         "print( x == y * (x//y) + x % y)"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6250,11 +6250,11 @@
       "metadata": {
         "id": "hcVOGNK9IUbg",
         "colab_type": "code",
+        "outputId": "63fb7504-80c4-4fd5-a328-535371613bae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "63fb7504-80c4-4fd5-a328-535371613bae"
+        }
       },
       "source": [
         "a = Decimal('-10')\n",
@@ -6263,7 +6263,7 @@
         "print(divmod(a, b))\n",
         "print( a == b * (a//b) + a % b)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6311,11 +6311,11 @@
       "metadata": {
         "id": "AHtCMvdLIWBj",
         "colab_type": "code",
+        "outputId": "7c6e9eb2-8ba2-4663-d864-6af2ac4edfb1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "7c6e9eb2-8ba2-4663-d864-6af2ac4edfb1"
+        }
       },
       "source": [
         "a = Decimal('1.5')\n",
@@ -6324,7 +6324,7 @@
         "print(a.exp())    # e**a\n",
         "print(a.sqrt())   # square root"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6384,18 +6384,18 @@
       "metadata": {
         "id": "1M9StY_TI2Ta",
         "colab_type": "code",
+        "outputId": "870d7aaf-24a4-46c8-b560-fd24b200b32b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "870d7aaf-24a4-46c8-b560-fd24b200b32b"
+        }
       },
       "source": [
         "print(format(root_float, '1.27f'))\n",
         "print(format(root_mixed, '1.27f'))\n",
         "print(root_dec)"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6413,18 +6413,18 @@
       "metadata": {
         "id": "GasNDxK2I5QZ",
         "colab_type": "code",
+        "outputId": "a1b1b680-2a7e-4201-958c-72b7ce8f0098",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "a1b1b680-2a7e-4201-958c-72b7ce8f0098"
+        }
       },
       "source": [
         "print(format(root_float * root_float, '1.27f'))\n",
         "print(format(root_mixed * root_mixed, '1.27f'))\n",
         "print(root_dec * root_dec)"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6452,11 +6452,11 @@
       "metadata": {
         "id": "wnqcnZzgI52L",
         "colab_type": "code",
+        "outputId": "94330c15-1468-4d0e-b4c1-67c23246a910",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "94330c15-1468-4d0e-b4c1-67c23246a910"
+        }
       },
       "source": [
         "x = 0.01\n",
@@ -6470,7 +6470,7 @@
         "print(format(root_mixed, '1.27f'))\n",
         "print(root_dec)"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6488,18 +6488,18 @@
       "metadata": {
         "id": "ZF-7iUk1I8n5",
         "colab_type": "code",
+        "outputId": "b716ac75-8448-48d3-9756-1a1216eab09e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "b716ac75-8448-48d3-9756-1a1216eab09e"
+        }
       },
       "source": [
         "print(format(root_float * root_float, '1.27f'))\n",
         "print(format(root_mixed * root_mixed, '1.27f'))\n",
         "print(root_dec * root_dec)"
       ],
-      "execution_count": 35,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6585,16 +6585,16 @@
       "metadata": {
         "id": "qLyVXMYdPZzt",
         "colab_type": "code",
+        "outputId": "78f9cd10-bb37-4645-9224-81b434c9dbe7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "78f9cd10-bb37-4645-9224-81b434c9dbe7"
+        }
       },
       "source": [
         "sys.getsizeof(a)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6625,16 +6625,16 @@
       "metadata": {
         "id": "KxXY_TP2PeXy",
         "colab_type": "code",
+        "outputId": "18700910-63ec-4242-aab5-2dd1e4f3b984",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "18700910-63ec-4242-aab5-2dd1e4f3b984"
+        }
       },
       "source": [
         "sys.getsizeof(b)"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6723,11 +6723,11 @@
       "metadata": {
         "id": "9r4wGJ0pP1Eb",
         "colab_type": "code",
+        "outputId": "9a8430e2-0f5b-4296-a0c2-43b7fd15ad67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "9a8430e2-0f5b-4296-a0c2-43b7fd15ad67"
+        }
       },
       "source": [
         "n = 10000000\n",
@@ -6742,7 +6742,7 @@
         "end = time.perf_counter()\n",
         "print('decimal: ', end-start)"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6769,11 +6769,11 @@
       "metadata": {
         "id": "_AnrLFR6P6G3",
         "colab_type": "code",
+        "outputId": "ee6f1796-9684-4d4d-e621-2d822855cfe5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "ee6f1796-9684-4d4d-e621-2d822855cfe5"
+        }
       },
       "source": [
         "def run_float(n=1):\n",
@@ -6796,7 +6796,7 @@
         "end = time.perf_counter()\n",
         "print('decimal: ', end-start)"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6825,11 +6825,11 @@
       "metadata": {
         "id": "bfsNmbunP-Rl",
         "colab_type": "code",
+        "outputId": "9b0f4441-9bb7-484f-9520-b3f186ec0221",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "9b0f4441-9bb7-484f-9520-b3f186ec0221"
+        }
       },
       "source": [
         "n = 5000000\n",
@@ -6856,7 +6856,7 @@
         "end = time.perf_counter()\n",
         "print('decimal: ', end-start)"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -6866,6 +6866,96 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BQ0z8XVQlfbL",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 14.COMPLEX numbers"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SNttNiB3lnXm",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1DI_P7Yn7_5iUmSVDEwh6xKCDDoqygzzW)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GKYSQDVzlwus",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1qPROZOXwXuw4qFfp-Drr8DPmWtrdW7rp)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0K4WPEz3lnMD",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1CpLHgVcFTV6S2OVWdHFNJuzjEN1UkqaT)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HeQ5tad2lnAz",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1BB0m35lWrdNrp-WfSD-U1M0muEKKaCKr)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d-3OEQhWlm07",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1t4OeIhYuoTzWz8bWvQcYeZUBpqfD6qZG)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "op-ZXrV6lmoz",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1wzQ50uMZGClHwx22jh3JhQ7IPKHBQ1Fj)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vfGeRJxYlmUQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://drive.google.com/uc?id=1akIPl0Sszuy-VYA9OeTjFmqKNIfUJUBJ)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dCIy5aNhlmII",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Coding Time"
       ]
     },
     {
